--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p>Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali <br>
         desarrollador web front-end y back-end</p>
         <p>Contacto: 
-            <a href="https://mail.google.com/mail/u/1/#inbox?compose=new">
-                Gmail</a>
+            <a href="https://mail.google.com/mail/u/1/#inbox?compose=new">Gmail</a> |
+            <a href="https://outlook.office.com/mail">Outlook</a> |
             <a href="https://github.com/HilanAlegria">Mi GitHub</a>
         </p>
         <button id="theme-toggle">🌙 Modo Claro</button>
@@ -48,7 +48,7 @@
             <p>Diseño de página web "Sabor Caleño", un proyecto donde se busca dar a conocer la panaderia, sus productos, etc.</p>
             <a href="https://hilanalegria.github.io/PanaderiaSC/">Sabor Caleño</a>
             |
-            <a href="https://github.com/HilanAlegria/PanaderiaSC">Repositoriro de github</a>
+            <a href="https://github.com/HilanAlegria/PanaderiaSC">Repositorio de github</a>
         </div>
         <div class="proyecto hover-scale">
             <h3>Gestor de Grupos de Investigación</h3>
@@ -62,7 +62,19 @@
         <div class="proyecto hover-scale">
             <h3>Trabajo/Estudio back-end_Metaverse</h3>
             <p>Trabajo/Estudio de desarrollo back-end enfocado en el metaverso dentro de la universidad Santiago de Cali</p>
-            <a href="https://github.com/HilanAlegria/Trabajo-BackEnd_Metaverse">Repositoriro de github</a>
+            <a href="https://github.com/HilanAlegria/Trabajo-BackEnd_Metaverse">Repositorio de github</a>
+        </div>
+        <div class="proyecto hover-scale">
+            <h3>Analisis de Base de Datos de Cancer para la predicción de supervivencia</h3>
+            <p>Este proyecto analisa una base de datos de personas con cancer y predice con variables relacionadas y usando tecnicas de machine learning
+                para evaluar la precision de diferentes modelos de clasificacion</p>
+            <a href="https://github.com/HilanAlegria/Analisis-BD-de-Cancer-prediccion">Repositorio de github</a>
+        </div>
+        <div class="proyecto hover-scale">
+            <h3>Arquitectura de una red empresarial a pequeña escala</h3>
+            <p>Se desarrollo en Cisco Packet Tracer la arquitectura completa de la red de una empresa utilizando conexión entre sedes e inalámbrica.
+                Proyecto desarrollado en Cisco Parcker Tracer, para la materia de redes y cominucaciónes.</p>
+            <a href="https://github.com/mariogc55/Arquitectura-de-Red-de-una-Empresa">Repositorio de github</a>
         </div>
     </section>
 
