--- a/index.html
+++ b/index.html
@@ -5,83 +5,116 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio - Hilan Eduardo Alegria Yate</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="fade-in header-con-foto">
-    <div class="info-personal">
-        <h1 style="font-size: 50px;">Hola, Hilan Eduardo Alegria Yate</h1>
-        <p>Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali <br>
-        desarrollador web front-end y back-end</p>
+
+    <header>
+        <div class="perfil-container">
+        <div class="perfil-info">
+        <h1>Hola, Soy Hilan Eduardo Alegria Yate</h1>
+        <p>Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali</p>
+        <p>Desarrollador web front-end y back-end</p>
         <p>Contacto: 
-            <a href="https://mail.google.com/mail/u/1/#inbox?compose=new">Gmail</a> |
-            <a href="https://outlook.office.com/mail">Outlook</a> |
-            <a href="https://github.com/HilanAlegria">Mi GitHub</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eduardoalegriayate@gmail.com" target="_blank">Gmail</a> | 
+        <a href="https://outlook.live.com/owa/" target="_blank">Outlook</a> | 
+        <a href="https://github.com/HilanAlegria" target="_blank">Mi GitHub</a>
         </p>
-        <button id="theme-toggle">🌙 Modo Claro</button>
-    </div>
+        </div>
+        <div class="perfil-foto">
+        <img src="imagenes/ChatGPT Image 14 ago 2025, 08_27_58 a.m..png" alt="Foto de Hilan Eduardo Alegria Yate">
+        </div>
+        </div>
+    </header>
 
-    <div class="perfil-foto">
-        <img src="imagenes/foto referencia.jpg" alt="Hilan Alegria">
-    </div>
-</header>
-
-
-    <nav class="slide-down">
+    <nav>
         <ul>
-            <li><a href="#sobre-mi">Sobre mí</a></li> 
-            <li><a href="#proyectos">Proyectos</a></li>
+            <li><a href="#sobre-mi">Sobre mí |</a></li> 
+            <li><a href="#proyectos">Proyectos |</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
 
     <section id="sobre-mi" class="scroll-fade">
         <h2>Sobre mí</h2>
-        <p>Soy Hilan Eduardo Alegria Yate <br>
-          Estudiante de Ingenieria de sistemas, desarrollador front-end y back-end, analista de datos y gestor de proyectos <br>
-          Apasionado por aprender nuevas tecnologias y actualmente </p>
+        <p>Soy estudiante de Ingeniería de Sistemas en la Universidad Santiago de Cali, con experiencia en el desarrollo de aplicaciones web y programación en diferentes lenguajes. Me apasiona aprender nuevas tecnologías y aplicarlas en proyectos prácticos.</p>
     </section>
 
-    <section id="proyectos" class="scroll-fade">
+    <section id="proyectos" class="scroll-fade proyectos">
         <h2>Proyectos</h2>
         <div class="proyecto hover-scale">
-            <h3>Pagina Web-Panadería Sabor Caleño</h3>
+            <img src="imagenes/Proyecto 1.png" alt="Panadería Sabor Caleño">
+            <h3>Pagina Web - Panadería Sabor Caleño</h3>
             <p>Diseño de página web "Sabor Caleño", un proyecto donde se busca dar a conocer la panaderia, sus productos, etc.</p>
-            <a href="https://hilanalegria.github.io/PanaderiaSC/">Sabor Caleño</a>
-            |
+            <a href="https://hilanalegria.github.io/PanaderiaSC/">Sabor Caleño</a> |
             <a href="https://github.com/HilanAlegria/PanaderiaSC">Repositorio de github</a>
         </div>
+
         <div class="proyecto hover-scale">
+            <img src="imagenes/Proyecto 2.jpeg" alt="Gestor de Grupos de Investigación">
             <h3>Gestor de Grupos de Investigación</h3>
-            <p>actualmente en desarrollo.</p>
+            <p>Actualmente en desarrollo.</p>
         </div>
+
         <div class="proyecto hover-scale">
-            <h3>Automatizacion de Transformacion de lenguajes</h3>
+            <img src="imagenes/Proyecto 3.png" alt="Automatización de Lenguajes">
+            <h3>Automatización de Transformación de Lenguajes</h3>
             <p>Programa que transforma lenguajes simples en lenguajes diferentes</p>
             <a href="https://github.com/HilanAlegria/Automatas">Repositorio de github</a>
         </div>
+
         <div class="proyecto hover-scale">
-            <h3>Trabajo/Estudio back-end_Metaverse</h3>
+            <img src="imagenes/Proyecto 4.jpeg" alt="Trabajo Back-end Metaverso">
+            <h3>Trabajo/Estudio back-end Metaverse</h3>
             <p>Trabajo/Estudio de desarrollo back-end enfocado en el metaverso dentro de la universidad Santiago de Cali</p>
             <a href="https://github.com/HilanAlegria/Trabajo-BackEnd_Metaverse">Repositorio de github</a>
         </div>
+
         <div class="proyecto hover-scale">
-            <h3>Analisis de Base de Datos de Cancer para la predicción de supervivencia</h3>
-            <p>Este proyecto analisa una base de datos de personas con cancer y predice con variables relacionadas y usando tecnicas de machine learning
-                para evaluar la precision de diferentes modelos de clasificacion</p>
+            <img src="imagenes/Proyecto 5.png" alt="Análisis de Base de Datos de Cáncer">
+            <h3>Análisis de Base de Datos de Cáncer</h3>
+            <p>Proyecto que analiza una base de datos de personas con cáncer y predice la supervivencia utilizando técnicas de machine learning para evaluar la precisión de modelos de clasificación.</p>
             <a href="https://github.com/HilanAlegria/Analisis-BD-de-Cancer-prediccion">Repositorio de github</a>
         </div>
+
         <div class="proyecto hover-scale">
-            <h3>Arquitectura de una red empresarial a pequeña escala</h3>
-            <p>Se desarrollo en Cisco Packet Tracer la arquitectura completa de la red de una empresa utilizando conexión entre sedes e inalámbrica.
-                Proyecto desarrollado en Cisco Parcker Tracer, para la materia de redes y cominucaciónes.</p>
+            <img src="imagenes/Proyecto 6.jpg" alt="Arquitectura de Red Empresarial">
+            <h3>Arquitectura de una Red Empresarial a Pequeña Escala</h3>
+            <p>Se desarrolló en Cisco Packet Tracer la arquitectura completa de la red de una empresa utilizando conexión entre sedes e inalámbrica. Proyecto para la materia de redes y comunicaciones.</p>
             <a href="https://github.com/mariogc55/Arquitectura-de-Red-de-una-Empresa">Repositorio de github</a>
         </div>
     </section>
 
-    <footer class="fade-in">
-        <p>&copy; 2025 Hilan Eduardo Alegria Yate - Todos los derechos reservados</p>
+    <section id="habilidades" class="scroll-fade">
+        <h2>Habilidades</h2>
+        <div class="habilidades-grid">
+            <div class="habilidad">
+            <h3>Lenguajes de Programación</h3>
+            <p>Python, Java, HTML, CSS, JavaScript</p>
+        </div>
+        <div class="habilidad">
+            <h3>Desarrollo Web</h3>
+            <p>HTML5, CSS3, Bootstrap, Node.js</p>
+        </div>
+        <div class="habilidad">
+            <h3>Análisis y Datos</h3>
+            <p>Pandas, Excel avanzado, Google Colab</p>
+        </div>
+        <div class="habilidad">
+            <h3>Herramientas</h3>
+            <p>Git, GitHub, VS Code, Cisco Packet Tracer</p>
+        </div>
+        <div class="habilidad">
+            <h3>Otros</h3>
+            <p>Plataformas y herramientas ofimáticas</p>
+        </div>
+        </div>
+    </section>
+
+
+    <footer>
+        <p>&copy; 2025 Hilan Eduardo Alegria Yate</p>
     </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
