--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
         </div>
         <div class="perfil-foto">
-        <img src="imagenes/ChatGPT Image 14 ago 2025, 08_27_58 a.m..png" alt="Foto de Hilan Eduardo Alegria Yate">
+        <img src="imagenes/Referencia 2.png" alt="Foto de Hilan Eduardo Alegria Yate">
         </div>
         </div>
     </header>
