--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <title>Portafolio - Hilan Eduardo Alegria Yate</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
     <header>
         <div class="perfil-container">
         <div class="perfil-info">
-        <h1>Hola, Soy Hilan Eduardo Alegria Yate</h1>
-        <p>Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali</p>
-        <p>Desarrollador web front-end y back-end</p>
-        <p>Contacto: 
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eduardoalegriayate@gmail.com" target="_blank">Gmail</a> | 
-        <a href="https://outlook.live.com/owa/" target="_blank">Outlook</a> | 
-        <a href="https://github.com/HilanAlegria" target="_blank">Mi GitHub</a>
+        <h1 style="font-size: 65px;">Hola, Soy Hilan Eduardo Alegria Yate</h1>
+        <p style="font-size: 20px;">Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali 
+        <br> Desarrollador web front-end y back-end</p>
+        <p>Contacto:  
+        <a href="www.linkedin.com/in/hilan-alegria-yate-07063629a" target="_blank">
+            <i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/HilanAlegria" target="_blank">
+            <i class="fab fa-github"></i> </a>
         </p>
         </div>
         <div class="perfil-foto">
@@ -29,9 +31,9 @@
 
     <nav>
         <ul>
-            <li><a href="#sobre-mi">Sobre mí |</a></li> 
-            <li><a href="#proyectos">Proyectos |</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#sobre-mi" style="font-size: 25px;">Sobre mí |</a></li> 
+            <li><a href="#proyectos" style="font-size: 25px;">Proyectos |</a></li>
+            <li><a href="#contacto" style="font-size: 25px;">Contacto</a></li>
         </ul>
     </nav>
 
@@ -41,7 +43,7 @@
     </section>
 
     <section id="proyectos" class="scroll-fade proyectos">
-        <h2>Proyectos</h2>
+        <h2 style="font-size: 50px;">Proyectos</h2>
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 1.png" alt="Panadería Sabor Caleño">
             <h3>Pagina Web - Panadería Sabor Caleño</h3>
@@ -86,11 +88,18 @@
     </section>
 
     <section id="habilidades" class="scroll-fade">
-        <h2>Habilidades</h2>
+        <h2 style="font-size: 50px;">Habilidades</h2>
         <div class="habilidades-grid">
-            <div class="habilidad">
+        <div class="habilidad">
             <h3>Lenguajes de Programación</h3>
-            <p>Python, Java, HTML, CSS, JavaScript</p>
+            <div class="iconos-lenguajes">
+                <i class="fab fa-python" title="Python"></i> | 
+                <i class="fab fa-java" title="Java"></i> | 
+                <i class="fab fa-html5" title="HTML5"></i> | 
+                <i class="fab fa-css3-alt" title="CSS3"></i> | 
+                <i class="fab fa-js-square" title="JavaScript"></i> 
+            </div>
+        </div>
         </div>
         <div class="habilidad">
             <h3>Desarrollo Web</h3>
