--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <p style="font-size: 20px;">Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali 
         <br> Desarrollador web front-end y back-end</p>
         <p>Contacto:  
-        <a href="www.linkedin.com/in/hilan-alegria-yate-07063629a" target="_blank">
-            <i class="fab fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/hilan-alegria-yate-07063629a" target="_blank">
+            <i class="fab fa-linkedin"></i></a> | 
         <a href="https://github.com/HilanAlegria" target="_blank">
             <i class="fab fa-github"></i> </a>
         </p>
         </div>
         <div class="perfil-foto">
-        <img src="imagenes/Referencia 2.png" alt="Foto de Hilan Eduardo Alegria Yate">
+        <img src="imagenes/Referencia 3.jpg" alt="H4ck3rm4n">
         </div>
         </div>
     </header>
@@ -32,8 +32,7 @@
     <nav>
         <ul>
             <li><a href="#sobre-mi" style="font-size: 25px;">Sobre mí |</a></li> 
-            <li><a href="#proyectos" style="font-size: 25px;">Proyectos |</a></li>
-            <li><a href="#contacto" style="font-size: 25px;">Contacto</a></li>
+            <li><a href="#proyectos" style="font-size: 25px;">Proyectos </a></li>
         </ul>
     </nav>
 
@@ -47,80 +46,74 @@
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 1.png" alt="Panadería Sabor Caleño">
             <h3>Pagina Web - Panadería Sabor Caleño</h3>
-            <p>Diseño de página web "Sabor Caleño", un proyecto donde se busca dar a conocer la panaderia, sus productos, etc.</p>
-            <a href="https://hilanalegria.github.io/PanaderiaSC/">Sabor Caleño</a> |
-            <a href="https://github.com/HilanAlegria/PanaderiaSC">Repositorio de github</a>
+            <p>Diseño de página web "Sabor Caleño", un proyecto donde se busca dar a conocer la panaderia, sus productos, etc.
+                <a href="https://hilanalegria.github.io/PanaderiaSC/">Sabor Caleño</a> |
+            </p>
+            <a href="https://github.com/HilanAlegria/PanaderiaSC">
+            <i class="fab fa-github"></i> </a></a>
         </div>
 
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 2.jpeg" alt="Gestor de Grupos de Investigación">
             <h3>Gestor de Grupos de Investigación</h3>
             <p>Actualmente en desarrollo.</p>
+            <a href="https://github.com/HilanAlegria/Automatizacion-IA-Gestion-Proyectos-TI">
+            <i class="fab fa-github"></i></a>
         </div>
 
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 3.png" alt="Automatización de Lenguajes">
             <h3>Automatización de Transformación de Lenguajes</h3>
             <p>Programa que transforma lenguajes simples en lenguajes diferentes</p>
-            <a href="https://github.com/HilanAlegria/Automatas">Repositorio de github</a>
+            <a href="https://github.com/HilanAlegria/Automatas">
+                <i class="fab fa-github"></i></a>
         </div>
 
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 4.jpeg" alt="Trabajo Back-end Metaverso">
             <h3>Trabajo/Estudio back-end Metaverse</h3>
             <p>Trabajo/Estudio de desarrollo back-end enfocado en el metaverso dentro de la universidad Santiago de Cali</p>
-            <a href="https://github.com/HilanAlegria/Trabajo-BackEnd_Metaverse">Repositorio de github</a>
+            <a href="https://github.com/HilanAlegria/Trabajo-BackEnd_Metaverse">
+                <i class="fab fa-github"></i></a>
         </div>
 
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 5.png" alt="Análisis de Base de Datos de Cáncer">
             <h3>Análisis de Base de Datos de Cáncer</h3>
             <p>Proyecto que analiza una base de datos de personas con cáncer y predice la supervivencia utilizando técnicas de machine learning para evaluar la precisión de modelos de clasificación.</p>
-            <a href="https://github.com/HilanAlegria/Analisis-BD-de-Cancer-prediccion">Repositorio de github</a>
+            <a href="https://github.com/HilanAlegria/Analisis-BD-de-Cancer-prediccion">
+                <i class="fab fa-github"></i></a>
         </div>
 
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 6.jpg" alt="Arquitectura de Red Empresarial">
             <h3>Arquitectura de una Red Empresarial a Pequeña Escala</h3>
             <p>Se desarrolló en Cisco Packet Tracer la arquitectura completa de la red de una empresa utilizando conexión entre sedes e inalámbrica. Proyecto para la materia de redes y comunicaciones.</p>
-            <a href="https://github.com/mariogc55/Arquitectura-de-Red-de-una-Empresa">Repositorio de github</a>
+            <a href="https://github.com/mariogc55/Arquitectura-de-Red-de-una-Empresa">
+                <i class="fab fa-github"></i></a>
         </div>
     </section>
 
     <section id="habilidades" class="scroll-fade">
-        <h2 style="font-size: 50px;">Habilidades</h2>
-        <div class="habilidades-grid">
-        <div class="habilidad">
-            <h3>Lenguajes de Programación</h3>
-            <div class="iconos-lenguajes">
-                <i class="fab fa-python" title="Python"></i> | 
-                <i class="fab fa-java" title="Java"></i> | 
-                <i class="fab fa-html5" title="HTML5"></i> | 
-                <i class="fab fa-css3-alt" title="CSS3"></i> | 
-                <i class="fab fa-js-square" title="JavaScript"></i> 
-            </div>
-        </div>
-        </div>
-        <div class="habilidad">
-            <h3>Desarrollo Web</h3>
-            <p>HTML5, CSS3, Bootstrap, Node.js</p>
-        </div>
-        <div class="habilidad">
-            <h3>Análisis y Datos</h3>
-            <p>Pandas, Excel avanzado, Google Colab</p>
-        </div>
-        <div class="habilidad">
-            <h3>Herramientas</h3>
-            <p>Git, GitHub, VS Code, Cisco Packet Tracer</p>
-        </div>
-        <div class="habilidad">
-            <h3>Otros</h3>
-            <p>Plataformas y herramientas ofimáticas</p>
-        </div>
-        </div>
-    </section>
-
-
+    <h2 style="font-size: 50px; text-align: center;">Habilidades</h2>
+    <ul class="habilidades-grid">
+        <li class="habilidad"><i class="fab fa-python" title="Python"></i> Python</li>
+        <li class="habilidad"><i class="fab fa-java" title="Java"></i> Java</li>
+        <li class="habilidad"><i class="fab fa-html5" title="HTML5"></i> HTML5</li>
+        <li class="habilidad"><i class="fab fa-css3-alt" title="CSS3"></i> CSS3</li>
+        <li class="habilidad"><i class="fab fa-js-square" title="JavaScript"></i> JavaScript</li>
+        <li class="habilidad"><i class="bi bi-bootstrap" title="Bootstrap"></i> Bootstrap</li>
+        <li class="habilidad"><i class="bi bi-node-plus" title="Node.js"></i> Node.js</li>
+        <li class="habilidad"><i class="bi bi-bar-chart" title="Pandas"></i> Pandas</li>
+        <li class="habilidad"><i class="bi bi-file-excel" title="Excel avanzado"></i> Excel Avanzado</li>
+        <li class="habilidad"><i class="bi bi-google" title="Google Colab"></i> Google Colab</li>
+        <li class="habilidad"><i class="bi bi-git" title="Git"></i> Git</li>
+        <li class="habilidad"><i class="bi bi-github" title="GitHub"></i> GitHub</li>
+        <li class="habilidad"><i class="bi bi-terminal" title="VS Code"></i> VS Code</li>
+        <li class="habilidad"><i class="bi bi-wifi" title="Cisco Packet Tracer"></i> Cisco Packet Tracer</li>
+        <li class="habilidad"><i class="bi bi-laptop" title="Ofimática"></i> Herramientas Ofimáticas</li>
+    </ul>
+</section>
     <footer>
         <p>&copy; 2025 Hilan Eduardo Alegria Yate</p>
     </footer>
