--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
         </div>
         <div class="perfil-foto">
-        <img src="imagenes/Referencia 3.jpg" alt="H4ck3rm4n">
+        <img src="imagenes/Hackerman.jpg" alt="H4ck3rm4n">
         </div>
         </div>
     </header>
