--- a/index.html
+++ b/index.html
@@ -4,56 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio - Hilan Eduardo Alegria Yate</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <header>
-        <div class="perfil-container">
+<header>
+    <div class="perfil-container">
         <div class="perfil-info">
-        <h1 style="font-size: 65px;">Hola, Soy Hilan Eduardo Alegria Yate</h1>
-        <p style="font-size: 20px;">Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali 
-        <br> Desarrollador web front-end y back-end</p>
-        <p>Contacto:  
-        <a href="https://www.linkedin.com/in/hilan-alegria-yate-07063629a" target="_blank">
-            <i class="fab fa-linkedin"></i></a> | 
-        <a href="https://github.com/HilanAlegria" target="_blank">
-            <i class="fab fa-github"></i> </a>
-        </p>
+            <h1 class="typewriter">Hola, Soy Hilan Eduardo Alegria Yate</h1>
+            <p style="font-size: 20px;">Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali 
+            <br> Desarrollador web front-end y back-end</p>
         </div>
         <div class="perfil-foto">
-        <img src="imagenes/Hackerman.jpg" alt="H4ck3rm4n">
+            <img src="imagenes/Hackerman.jpg" alt="H4ck3rm4n">
         </div>
-        </div>
-    </header>
+    </div>
+</header>
+
 
     <nav>
         <ul>
-            <li><a href="#sobre-mi" style="font-size: 25px;">Sobre mí |</a></li> 
-            <li><a href="#proyectos" style="font-size: 25px;">Proyectos </a></li>
+            <li><a href="#sobre-mi" style="font-size: 25px;">Sobre mí</a></li> 
+            <li><a href="#proyectos" style="font-size: 25px;">Proyectos</a></li>
+            <li><a href="#habilidades" style="font-size: 25px;">Habilidades</a></li>
+            <li><a href="#contacto" style="font-size: 25px;">Contacto</a></li>
         </ul>
     </nav>
 
     <section id="sobre-mi" class="scroll-fade">
         <h2>Sobre mí</h2>
-        <p>Soy estudiante de Ingeniería de Sistemas en la Universidad Santiago de Cali, con experiencia en el desarrollo de aplicaciones web y programación en diferentes lenguajes. Me apasiona aprender nuevas tecnologías y aplicarlas en proyectos prácticos.</p>
+        <p>
+            Soy un estudiante apasionado por la tecnología, en constante aprendizaje y con experiencia en desarrollo web, análisis de datos y redes. 
+            Busco siempre crear soluciones digitales eficientes, escalables y sostenibles.
+        </p>
     </section>
 
-    <section id="proyectos" class="scroll-fade proyectos">
-        <h2 style="font-size: 50px;">Proyectos</h2>
-        <div class="proyecto hover-scale">
+    <section id="proyectos" class="scroll-fade">
+        <h2>Proyectos</h2>
+        <div class="proyectos">
+           <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 1.png" alt="Panadería Sabor Caleño">
             <h3>Pagina Web - Panadería Sabor Caleño</h3>
             <p>Diseño de página web "Sabor Caleño", un proyecto donde se busca dar a conocer la panaderia, sus productos, etc.
-                <a href="https://hilanalegria.github.io/PanaderiaSC/">Sabor Caleño</a> |
+                <a href="https://hilanalegria.github.io/PanaderiaSC/">
+                <br>    Sabor Caleño</a> 
             </p>
             <a href="https://github.com/HilanAlegria/PanaderiaSC">
             <i class="fab fa-github"></i> </a></a>
         </div>
-
-        <div class="proyecto hover-scale">
+             <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 3.png" alt="Automatización de Lenguajes">
             <h3>Automatización de Transformación de Lenguajes</h3>
             <p>Programa que transforma lenguajes simples en lenguajes diferentes</p>
@@ -84,30 +85,53 @@
             <a href="https://github.com/mariogc55/Arquitectura-de-Red-de-una-Empresa">
                 <i class="fab fa-github"></i></a>
         </div>
+        </div>
     </section>
 
+    <!-- Habilidades -->
     <section id="habilidades" class="scroll-fade">
-    <h2 style="font-size: 50px; text-align: center;">Habilidades</h2>
-    <ul class="habilidades-grid">
-        <li class="habilidad"><i class="fab fa-python" title="Python"></i> Python</li>
-        <li class="habilidad"><i class="fab fa-java" title="Java"></i> Java</li>
-        <li class="habilidad"><i class="fab fa-html5" title="HTML5"></i> HTML5</li>
-        <li class="habilidad"><i class="fab fa-css3-alt" title="CSS3"></i> CSS3</li>
-        <li class="habilidad"><i class="fab fa-js-square" title="JavaScript"></i> JavaScript</li>
-        <li class="habilidad"><i class="bi bi-bootstrap" title="Bootstrap"></i> Bootstrap</li>
-        <li class="habilidad"><i class="bi bi-node-plus" title="Node.js"></i> Node.js</li>
-        <li class="habilidad"><i class="bi bi-bar-chart" title="Pandas"></i> Pandas</li>
-        <li class="habilidad"><i class="bi bi-file-excel" title="Excel avanzado"></i> Excel Avanzado</li>
-        <li class="habilidad"><i class="bi bi-google" title="Google Colab"></i> Google Colab</li>
-        <li class="habilidad"><i class="bi bi-git" title="Git"></i> Git</li>
-        <li class="habilidad"><i class="bi bi-github" title="GitHub"></i> GitHub</li>
-        <li class="habilidad"><i class="bi bi-terminal" title="VS Code"></i> VS Code</li>
-        <li class="habilidad"><i class="bi bi-wifi" title="Cisco Packet Tracer"></i> Cisco Packet Tracer</li>
-        <li class="habilidad"><i class="bi bi-laptop" title="Ofimática"></i> Herramientas Ofimáticas</li>
-    </ul>
-</section>
+        <h2 style="font-size: 50px;">Habilidades</h2>
+        <ul class="habilidades-list">
+            <li><i class="fab fa-python"></i> Python</li>
+            <li><i class="fab fa-java"></i> Java</li>
+            <li><i class="fab fa-html5"></i> HTML5</li>
+            <li><i class="fab fa-css3-alt"></i> CSS3</li>
+            <li><i class="fab fa-js"></i> JavaScript</li>
+            <li><i class="bi bi-bootstrap"></i> Bootstrap</li>
+            <li><i class="fab fa-node"></i> Node.js</li>
+            <li><i class="bi bi-file-excel"></i> Excel Avanzado</li>
+            <li><i class="fab fa-git-alt"></i> Git</li>
+            <li><i class="fab fa-github"></i> GitHub</li>
+            <li><i class="bi bi-code-slash"></i> VS Code</li>
+            <li><i class="bi bi-router"></i> Cisco Packet Tracer</li>
+        </ul>
+    </section>
+
+    <!-- Contacto -->
+    <section id="contacto" class="scroll-fade">
+        <h2>Contacto</h2>
+        <p><i class="bi bi-person-circle"></i> Hilan Eduardo Alegria Yate</p>
+        <p><i class="bi bi-envelope"></i> eduardoalegriayate@gmail.com</p>
+        <p>
+            <a href="https://www.linkedin.com/in/hilan-alegria-yate-07063629a" target="_blank">
+                <i class="fab fa-linkedin"></i></a> | 
+            <a href="https://github.com/HilanAlegria" target="_blank">
+                <i class="fab fa-github"></i></a> | 
+            <a href="mailto:eduardoalegriayate@gmail.com">
+                <i class="bi bi-envelope"></i></a>
+        </p>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Hilan Eduardo Alegria Yate</p>
+        <p>&copy; 2025 Hilan Eduardo Alegria Yate - Portafolio</p>
+    </footer>
+
+    <!-- JS -->
+    <script src="script.js"></script>
+</body>
+</html>
+
     </footer>
 
 </body>
