--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
         <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
+<header id="Inicio">
+    <canvas id="matrix"></canvas>
+    
     <div class="perfil-container">
         <div class="perfil-info">
-            <h1 class="typewriter">Hola, Soy Hilan Eduardo Alegria Yate</h1>
-            <p style="font-size: 20px;">Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali 
-            <br> Desarrollador web front-end y back-end</p>
+            <h1 class="typewriter">Hola, Soy Hilan Eduardo Alegria Yate.</h1>
+            <p>Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali <br>
+               Desarrollador web front-end y back-end</p>
         </div>
         <div class="perfil-foto">
             <img src="imagenes/Hackerman.jpg" alt="H4ck3rm4n">
         </div>
     </div>
 </header>
-
 
     <nav>
         <ul>
@@ -88,7 +89,6 @@
         </div>
     </section>
 
-    <!-- Habilidades -->
     <section id="habilidades" class="scroll-fade">
         <h2 style="font-size: 50px;">Habilidades</h2>
         <ul class="habilidades-list">
@@ -107,7 +107,6 @@
         </ul>
     </section>
 
-    <!-- Contacto -->
     <section id="contacto" class="scroll-fade">
         <h2>Contacto</h2>
         <p><i class="bi bi-person-circle"></i> Hilan Eduardo Alegria Yate</p>
@@ -122,17 +121,10 @@
         </p>
     </section>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Hilan Eduardo Alegria Yate - Portafolio</p>
     </footer>
 
-    <!-- JS -->
     <script src="script.js"></script>
-</body>
-</html>
-
-    </footer>
-
 </body>
 </html>
