--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                Desarrollador web front-end y back-end</p>
         </div>
         <div class="perfil-foto">
-            <img src="imagenes/Hackerman.jpg" alt="H4ck3rm4n">
+            <img src="imagenes/foto referencia.jpg" alt="H4ck3rm4n">
         </div>
     </div>
 </header>
@@ -37,9 +37,15 @@
     <section id="sobre-mi" class="scroll-fade">
         <h2>Sobre mí</h2>
         <p>
-            Soy un estudiante apasionado por la tecnología, en constante aprendizaje y con experiencia en desarrollo web, análisis de datos y redes. 
-            Busco siempre crear soluciones digitales eficientes, escalables y sostenibles.
+            Soy Hilan Eduardo Alegria Yate, estudiante de Ingeniería de Sistemas en la Universidad Santiago de Cali,
+            apasionado por la tecnología y el constante aprendizaje, cuento con experiencia en desarrollo web,
+            análisis de datos y creacion de servidores de redes basicos.
+            Busco aprender nuevas cosas y utilizar eficientemente las herramientas que nos proporcionan la tecnologia actual.
         </p>
+        <h2>Estudios</h2>
+        <p>Bachillerato: 2016 - 2021 <br>
+            Universidad: 
+            Universidad Santiago de Cali - 2022 - Actualidad</p>
     </section>
 
     <section id="proyectos" class="scroll-fade">
@@ -74,7 +80,8 @@
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 5.png" alt="Análisis de Base de Datos de Cáncer">
             <h3>Análisis de Base de Datos de Cáncer</h3>
-            <p>Proyecto que analiza una base de datos de personas con cáncer y predice la supervivencia utilizando técnicas de machine learning para evaluar la precisión de modelos de clasificación.</p>
+            <p>Proyecto que analiza una base de datos de personas con cáncer y predice la supervivencia
+                utilizando técnicas de machine learning para evaluar la precisión de modelos de clasificación.</p>
             <a href="https://github.com/HilanAlegria/Analisis-BD-de-Cancer-prediccion">
                 <i class="fab fa-github"></i></a>
         </div>
@@ -93,14 +100,10 @@
         <h2 style="font-size: 50px;">Habilidades</h2>
         <ul class="habilidades-list">
             <li><i class="fab fa-python"></i> Python</li>
-            <li><i class="fab fa-java"></i> Java</li>
             <li><i class="fab fa-html5"></i> HTML5</li>
             <li><i class="fab fa-css3-alt"></i> CSS3</li>
             <li><i class="fab fa-js"></i> JavaScript</li>
-            <li><i class="bi bi-bootstrap"></i> Bootstrap</li>
-            <li><i class="fab fa-node"></i> Node.js</li>
-            <li><i class="bi bi-file-excel"></i> Excel Avanzado</li>
-            <li><i class="fab fa-git-alt"></i> Git</li>
+            <li><i class="bi bi-file-excel"></i> Excel Intermedio</li>
             <li><i class="fab fa-github"></i> GitHub</li>
             <li><i class="bi bi-code-slash"></i> VS Code</li>
             <li><i class="bi bi-router"></i> Cisco Packet Tracer</li>
