--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio - Hilan Eduardo Alegria Yate</title>
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="styles.css">
+    <title>Portfolio - Hilan Eduardo Alegria Yate</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 <header id="Inicio">
@@ -15,119 +16,146 @@
     
     <div class="perfil-container">
         <div class="perfil-info">
-            <h1 class="typewriter">Hola, Soy Hilan Eduardo Alegria Yate.</h1>
-            <p>Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali <br>
-               Desarrollador web front-end y back-end</p>
+            <h1 class="typewriter" 
+                data-es="Hola, Soy Hilan Eduardo Alegria Yate." 
+                data-en="Hi, I´m Hilan Eduardo Alegria Yate.">
+                Hi, I am Hilan Eduardo Alegria Yate.
+            </h1>
+            <p data-es="Estudiante de Ingeniería de Sistemas - Universidad Santiago de Cali. Desarrollador web front-end y back-end"
+               data-en="Systems Engineering Student - Universidad Santiago de Cali. Front-end and Back-end Web Developer">
+               Systems Engineering Student - Universidad Santiago de Cali. Front-end and Back-end Web Developer
+            </p>
         </div>
         <div class="perfil-foto">
-            <img src="imagenes/foto referencia.jpg" alt="H4ck3rm4n">
+            <img src="imagenes/foto referencia.jpg" alt="Profile Picture">
         </div>
     </div>
 </header>
 
-    <nav>
-        <ul>
-            <li><a href="#sobre-mi" style="font-size: 25px;">Sobre mí</a></li> 
-            <li><a href="#proyectos" style="font-size: 25px;">Proyectos</a></li>
-            <li><a href="#habilidades" style="font-size: 25px;">Habilidades</a></li>
-            <li><a href="#contacto" style="font-size: 25px;">Contacto</a></li>
-        </ul>
-    </nav>
+<!-- Botón de idioma -->
+<div class="lang-switch">
+    <button onclick="setLanguage('en')">EN</button>
+    <button onclick="setLanguage('es')">ES</button>
+</div>
 
-    <section id="sobre-mi" class="scroll-fade">
-        <h2>Sobre mí</h2>
-        <p>
-            Soy Hilan Eduardo Alegria Yate, estudiante de Ingeniería de Sistemas en la Universidad Santiago de Cali,
-            apasionado por la tecnología y el constante aprendizaje, cuento con experiencia en desarrollo web,
-            análisis de datos y creacion de servidores de redes basicos.
-            Busco aprender nuevas cosas y utilizar eficientemente las herramientas que nos proporcionan la tecnologia actual.
-        </p>
-        <h2>Estudios</h2>
-        <p>Bachillerato: 2016 - 2021 <br>
-            Universidad: 
-            Universidad Santiago de Cali - 2022 - Actualidad</p>
-    </section>
+<!-- Menú -->
+<nav>
+    <ul>
+        <li><a href="#sobre-mi" style="font-size: 25px;" data-es="Sobre mí" data-en="About Me">About Me</a></li> 
+        <li><a href="#proyectos" style="font-size: 25px;" data-es="Proyectos" data-en="Projects">Projects</a></li>
+        <li><a href="#habilidades" style="font-size: 25px;" data-es="Habilidades" data-en="Skills">Skills</a></li>
+        <li><a href="#contacto" style="font-size: 25px;" data-es="Contacto" data-en="Contact">Contact</a></li>
+    </ul>
+</nav>
 
-    <section id="proyectos" class="scroll-fade">
-        <h2>Proyectos</h2>
-        <div class="proyectos">
-           <div class="proyecto hover-scale">
+<!-- SOBRE MÍ -->
+<section id="sobre-mi" class="scroll-fade">
+    <h2 data-es="Sobre mí" data-en="About Me">About Me</h2>
+    <p data-es="Soy Hilan Eduardo Alegria Yate, estudiante de Ingeniería de Sistemas en la Universidad Santiago de Cali, apasionado por la tecnología y el constante aprendizaje, con experiencia en desarrollo web, análisis de datos y creación de servidores de redes básicos."
+       data-en="I am Hilan Eduardo Alegria Yate, a Systems Engineering student at Universidad Santiago de Cali, passionate about technology and continuous learning, with experience in web development, data analysis, and building basic network servers.">
+       I am Hilan Eduardo Alegria Yate, a Systems Engineering student...
+    </p>
+    <h2 data-es="Estudios" data-en="Education">Education</h2>
+    <p data-es="Bachillerato: 2016 - 2021. Universidad: Universidad Santiago de Cali - 2022 - Actualidad"
+       data-en="High School: 2016 - 2021. University: Universidad Santiago de Cali - 2022 - Present">
+       High School: 2016 - 2021. University: Universidad Santiago de Cali - 2022 - Present
+    </p>
+</section>
+
+<!-- PROYECTOS -->
+<section id="proyectos" class="scroll-fade">
+    <h2 data-es="Proyectos" data-en="Projects">Projects</h2>
+    <div class="proyectos">
+        <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 1.png" alt="Panadería Sabor Caleño">
-            <h3>Pagina Web - Panadería Sabor Caleño</h3>
-            <p>Diseño de página web "Sabor Caleño", un proyecto donde se busca dar a conocer la panaderia, sus productos, etc.
-                <a href="https://hilanalegria.github.io/PanaderiaSC/">
-                <br>    Sabor Caleño</a> 
+            <h3 data-es="Página Web - Panadería Sabor Caleño" data-en="Website - Sabor Caleño Bakery">Website - Sabor Caleño Bakery</h3>
+            <p data-es='Diseño de página web "Sabor Caleño", un proyecto donde se busca dar a conocer la panadería, sus productos, etc.'
+               data-en='"Sabor Caleño" website design, a project to showcase the bakery, its products, etc.'>
+               "Sabor Caleño" website design, a project to showcase the bakery, its products, etc.
             </p>
-            <a href="https://github.com/HilanAlegria/PanaderiaSC">
-            <i class="fab fa-github"></i> </a></a>
+            <a href="https://github.com/HilanAlegria/PanaderiaSC"><i class="fab fa-github"></i></a>
         </div>
-             <div class="proyecto hover-scale">
+
+        <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 3.png" alt="Automatización de Lenguajes">
-            <h3>Automatización de Transformación de Lenguajes</h3>
-            <p>Programa que transforma lenguajes simples en lenguajes diferentes</p>
-            <a href="https://github.com/HilanAlegria/Automatas">
-                <i class="fab fa-github"></i></a>
+            <h3 data-es="Automatización de Transformación de Lenguajes" data-en="Language Transformation Automation">Language Transformation Automation</h3>
+            <p data-es="Programa que transforma lenguajes simples en lenguajes diferentes"
+               data-en="Program that transforms simple languages into different ones">
+               Program that transforms simple languages into different ones
+            </p>
+            <a href="https://github.com/HilanAlegria/Automatas"><i class="fab fa-github"></i></a>
         </div>
 
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 4.jpeg" alt="Trabajo Back-end Metaverso">
-            <h3>Trabajo/Estudio back-end Metaverse</h3>
-            <p>Trabajo/Estudio de desarrollo back-end enfocado en el metaverso dentro de la universidad Santiago de Cali</p>
-            <a href="https://github.com/HilanAlegria/Trabajo-BackEnd_Metaverse">
-                <i class="fab fa-github"></i></a>
+            <h3 data-es="Trabajo/Estudio back-end Metaverse" data-en="Back-end Work/Study - Metaverse">Back-end Work/Study - Metaverse</h3>
+            <p data-es="Trabajo/Estudio de desarrollo back-end enfocado en el metaverso dentro de la universidad Santiago de Cali"
+               data-en="Back-end development study focused on the metaverse at Universidad Santiago de Cali">
+               Back-end development study focused on the metaverse at Universidad Santiago de Cali
+            </p>
+            <a href="https://github.com/HilanAlegria/Trabajo-BackEnd_Metaverse"><i class="fab fa-github"></i></a>
         </div>
 
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 5.png" alt="Análisis de Base de Datos de Cáncer">
-            <h3>Análisis de Base de Datos de Cáncer</h3>
-            <p>Proyecto que analiza una base de datos de personas con cáncer y predice la supervivencia
-                utilizando técnicas de machine learning para evaluar la precisión de modelos de clasificación.</p>
-            <a href="https://github.com/HilanAlegria/Analisis-BD-de-Cancer-prediccion">
-                <i class="fab fa-github"></i></a>
+            <h3 data-es="Análisis de Base de Datos de Cáncer" data-en="Cancer Database Analysis">Cancer Database Analysis</h3>
+            <p data-es="Proyecto que analiza una base de datos de personas con cáncer y predice la supervivencia utilizando machine learning."
+               data-en="Project analyzing a cancer database and predicting survival using machine learning.">
+               Project analyzing a cancer database and predicting survival using machine learning.
+            </p>
+            <a href="https://github.com/HilanAlegria/Analisis-BD-de-Cancer-prediccion"><i class="fab fa-github"></i></a>
         </div>
 
         <div class="proyecto hover-scale">
             <img src="imagenes/Proyecto 6.jpg" alt="Arquitectura de Red Empresarial">
-            <h3>Arquitectura de una Red Empresarial a Pequeña Escala</h3>
-            <p>Se desarrolló en Cisco Packet Tracer la arquitectura completa de la red de una empresa utilizando conexión entre sedes e inalámbrica. Proyecto para la materia de redes y comunicaciones.</p>
-            <a href="https://github.com/mariogc55/Arquitectura-de-Red-de-una-Empresa">
-                <i class="fab fa-github"></i></a>
+            <h3 data-es="Arquitectura de una Red Empresarial a Pequeña Escala" data-en="Small-Scale Business Network Architecture">Small-Scale Business Network Architecture</h3>
+            <p data-es="Se desarrolló en Cisco Packet Tracer la arquitectura completa de la red de una empresa utilizando conexión entre sedes e inalámbrica."
+               data-en="Developed in Cisco Packet Tracer the complete architecture of a company network using inter-branch and wireless connections.">
+               Developed in Cisco Packet Tracer the complete architecture of a company network using inter-branch and wireless connections.
+            </p>
+            <a href="https://github.com/mariogc55/Arquitectura-de-Red-de-una-Empresa"><i class="fab fa-github"></i></a>
         </div>
-        </div>
-    </section>
+    </div>
+</section>
 
-    <section id="habilidades" class="scroll-fade">
-        <h2 style="font-size: 50px;">Habilidades</h2>
-        <ul class="habilidades-list">
-            <li><i class="fab fa-python"></i> Python</li>
-            <li><i class="fab fa-html5"></i> HTML5</li>
-            <li><i class="fab fa-css3-alt"></i> CSS3</li>
-            <li><i class="fab fa-js"></i> JavaScript</li>
-            <li><i class="bi bi-file-excel"></i> Excel Intermedio</li>
-            <li><i class="fab fa-github"></i> GitHub</li>
-            <li><i class="bi bi-code-slash"></i> VS Code</li>
-            <li><i class="bi bi-router"></i> Cisco Packet Tracer</li>
-        </ul>
-    </section>
+<!-- HABILIDADES -->
+<section id="habilidades" class="scroll-fade">
+    <h2 style="font-size: 50px;" data-es="Habilidades" data-en="Skills">Skills</h2>
+    <ul class="habilidades-list">
+        <li><i class="fab fa-python"></i> Python</li>
+        <li><i class="fab fa-html5"></i> HTML5</li>
+        <li><i class="fab fa-css3-alt"></i> CSS3</li>
+        <li><i class="fab fa-js"></i> JavaScript</li>
+        <li><i class="bi bi-file-excel"></i> Excel</li>
+        <li><i class="fab fa-github"></i> GitHub</li>
+        <li><i class="bi bi-code-slash"></i> VS Code</li>
+        <li><i class="bi bi-router"></i> Cisco Packet Tracer</li>
+    </ul>
+</section>
 
-    <section id="contacto" class="scroll-fade">
-        <h2>Contacto</h2>
-        <p><i class="bi bi-person-circle"></i> Hilan Eduardo Alegria Yate</p>
-        <p><i class="bi bi-envelope"></i> eduardoalegriayate@gmail.com</p>
-        <p>
-            <a href="https://www.linkedin.com/in/hilan-alegria-yate-07063629a" target="_blank">
-                <i class="fab fa-linkedin"></i></a> | 
-            <a href="https://github.com/HilanAlegria" target="_blank">
-                <i class="fab fa-github"></i></a> | 
-            <a href="mailto:eduardoalegriayate@gmail.com">
-                <i class="bi bi-envelope"></i></a>
-        </p>
-    </section>
+<!-- CONTACTO -->
+<section id="contacto" class="scroll-fade">
+    <h2 data-es="Contacto" data-en="Contact">Contact</h2>
+    <p><i class="bi bi-person-circle"></i> Hilan Eduardo Alegria Yate</p>
+    <p><i class="bi bi-envelope"></i> eduardoalegriayate@gmail.com</p>
+    <p>
+        <a href="https://www.linkedin.com/in/hilan-alegria-yate-07063629a" target="_blank"><i class="fab fa-linkedin"></i></a> | 
+        <a href="https://github.com/HilanAlegria" target="_blank"><i class="fab fa-github"></i></a> | 
+        <a href="mailto:eduardoalegriayate@gmail.com"><i class="bi bi-envelope"></i></a>
+    </p>
+</section>
 
-    <footer>
-        <p>&copy; 2025 Hilan Eduardo Alegria Yate - Portafolio</p>
-    </footer>
+<footer>
+    <p data-es="© 2025 Hilan Eduardo Alegria Yate - Portafolio" 
+       data-en="© 2025 Hilan Eduardo Alegria Yate - Portfolio">
+       © 2025 Hilan Eduardo Alegria Yate - Portfolio
+    </p>
+</footer>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
+<script>
+    // Idioma inicial inglés
+    window.onload = () => setLanguage('en');
+</script>
 </body>
 </html>
